<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.shareok.data</groupId>
        <artifactId>shareokdata</artifactId>
        <version>1.1.1-SNAPSHOT</version>
    </parent>
    <artifactId>commons</artifactId>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.uuid</groupId>
            <artifactId>java-uuid-generator</artifactId>
            <version>3.1.3</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>documentProcessor</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>oulib.aws</groupId>
            <artifactId>ouaws</artifactId>
            <version>1.1.1-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
    </properties>
    
    <build>
        <plugins>
            <plugin>  
                <groupId>org.codehaus.mojo</groupId>  
                <artifactId>exec-maven-plugin</artifactId>  
                <version>1.5.0</version>  
                <configuration>  
                    <executable>java</executable>
                    <arguments>  
                        <argument>-XX:MaxPermSize=256m</argument> 
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>org.shareok.data.commons.Main</argument>
                        <argument>ul-bagit</argument>
                        <argument>ul-ir-workspace</argument>
                        <argument>sample_s3book_info_1.csv</argument>
                    </arguments>  
                </configuration>  
            </plugin>  
        </plugins>
    </build>
</project>